--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <link href="index.css" rel="stylesheet" type="text/css">
 <div id="main"></div>
+<p>Welcome to new World</p>
 </html>
